--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "context = context = ssl._create_unverified_context()\n",
     "\n",
-    "api_key = 'AIzaSyD1hQJSVgvOKyYhDg_lzyWW28LC9PikK8o'\n",
+    "api_key = ''\n",
     "\n",
     "#google_places = Google(MY_API_KEY)\n",
     "\n",
