--- a/Scraper.ipynb
+++ b/Scraper.ipynb
@@ -188,7 +188,7 @@
     "                        print(url + link)\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    '''Here url should be the result above''' \n",
+    "    '''Here in url should be the result above''' \n",
     "    url = 'https://www.mystore411.com'\n",
     "    \n",
     "    request_object = urllib.request.Request(url)\n",
