--- a/NewNewScraper-Copy1.ipynb
+++ b/NewNewScraper-Copy1.ipynb
@@ -42,7 +42,7 @@
     "        return CategLinks\n",
     "        \n",
     "        if tag == 'a':\n",
-    "            for attr in CategLinks:\n",
+    "            for attr in attrs:\n",
     "                if attr[0] == 'href':\n",
     "                    link = attr[1]\n",
     "                    if link.find('listing') >= 0:\n",
